# ebac_bookstore

./: Dockerfile  README.md  docker-compose.yml  env.dev  manage.py  pyproject.toml  pytest.ini
.github/workflows/: build.yml  workflow-pr.yml
ebac_bookstore/: asgi.py  settings.py  urls.py  views.py  wsgi.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
