[project]
name = "ebac-bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = [
    {name = "Iuri Guilherme Bogar Portilho",email = "iuribogar@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
